fix: Переименовал сферы на понятные названия. feat: Реализовано удаление опубликованных проектов.
